fix: extra MainLayout padding, add custom style for webkit scrollbar, extract nav sidebar links

--- a/src/index.scss
+++ b/src/index.scss
@@ -25,3 +25,27 @@ body {
   flex: 1;
   position: relative;
 }
+
+::-webkit-scrollbar {
+  width: 4px;
+  height: 4px;
+  display: block;
+  border-radius: 10px;
+  background-color: #f5f5f5;
+}
+
+body.dark {
+  ::-webkit-scrollbar {
+    background-color: #333;
+  }
+}
+
+::-webkit-scrollbar-thumb {
+  border-radius: 10px;
+  background-color: #ccc;
+}
+body.dark {
+  ::-webkit-scrollbar {
+    background-color: #242323;
+  }
+}
